# pytoon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pytoon.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_columnar_expansion.py  test_decoding.py  test_encode_decode_simple.py  test_encoding.py  test_error_cases.py  test_folding.py  test_parser.py  test_parser_core.py  test_round_trip.py  test_scanner.py
tests/helpers/: sample_data.py
toonit/: api.py
toonit/core/: parser.py  primitives.py  scanner.py  types.py  writer.py
toonit/decoding/: decoder.py  normalize.py  validation.py
toonit/encoding/: encoder.py  expand.py
toonit/utils/: constants.py  literal_utils.py  string_utils.py
