[project]
name = "toonit"
version = "0.1.0"
description = "Python implementation of the TOON (Token-Oriented Object Notation) format"
authors = [{name="Femi Alashi"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/femisimon/toonit"

[project.scripts]
toonit = "toonit.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["toonit"]
testpaths = ["tests"]
addopts = "-ra"
